--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hello World
+<html>
+<head>
+<title>Youngduck Choi</title>
+<meta name="description" content="Assistant Professor at New York University.
+                                  Papers on machine learning,
+                                  graphical models, and probabilistic inference.">
+</head>
+<body>
+
+<img align="right" src="ydchoi_profile.jpg" border="2" width=160>
+<h2>Youngduck Choi's Home Page</h2>
+
+<b>E-mail:</b> yc1104 {@ | at} nyu.edu<br>
+<b>Office:</b> 715 Broadway 1010 CILVR Lab
+<br><b><a href="https://github.com/ydchoi">Github profile</a></b>
+<br><b><a href="http://clinicalml.org/">Clinical machine learning group</a></b>
+<p> I am a student of
+  <a href="http://cs.nyu.edu/">Computer Science</a> and <a href="http://www.math.nyu.edu/">Mathematics</a> at NYU. 
+
+<h3>Current Project</h3>
+
+<h3>Publications</h3>
+<ul>
+<h4>Machine learning:</h4>
+<li>Y. Halpern, Y.D. Choi, S. Horng, D. Sontag. <a href="papers/HalpernEtAl_amia14.pdf">Using Anchors to Estimate Clinical State without Labeled Data</a>. <cite>American Medical Informatics Association (AMIA) Annual Symposium</cite>, Nov. 2014. [<a href="papers/HalpernEtAl_amia14_slides.pdf">Slides</a>] <a href="papers/bibtex/HalpernEtAl_amia14.txt">BibTex</a>
+
+
+
+</body>
+
+</html>
