--- a/index.html
+++ b/index.html
@@ -14,16 +14,37 @@
 <b>Office:</b> 715 Broadway 1010 CILVR Lab
 <br><b><a href="https://github.com/ydchoi">Github profile</a></b>
 <br><b><a href="http://clinicalml.org/">Clinical machine learning group</a></b>
-<p> I am a student of
-  <a href="http://cs.nyu.edu/">Computer Science</a> and <a href="http://www.math.nyu.edu/">Mathematics</a> at NYU. 
-
-<h3>Current Project</h3>
-
+<p> I am a junior research scientist at <a href="http://cilvr.nyu.edu/doku.php?id=people:start">
+  CILVR/Facebook lab</a>
+  at NYU under the supervision of
+  <a href="http://cs.nyu.edu/~dsontag/">David Sontag</a>. My research has 
+  focused on machine learning, with a particular concentration on applications of deep learning
+  to clinical medicine. For my recent work, I have
+  received an Honorable Mention in the 
+  <a href="http://www.cra.org/awards/undergrad-current/">CRA</a>
+  Outstanding Undergraduate Researcher Awards 2015, sponsored by 
+  <a href="http://research.microsoft.com/en-us/">Microsoft Research</a>. Currently, I am interested in 
+  the mathematical analysis of convolutions, as I believe that the analysis is crucial for
+  the extension of deep learning outside of standard regime, such as computer
+  vision.
+  Previously, I graduated from <a href="http://www.exeter.edu/"> Phillips Exeter Academy</a>,
+  where I was a qualifier of 
+  <a href="http://en.wikipedia.org/wiki/United_States_of_America_Mathematical_Olympiad">
+  USAMO</a> in 2009.
+Most importantly, I am a student of <a href="http://en.wikipedia.org/wiki/Computer_science">
+Computer Science</a> 
+  and <a href="http://en.wikipedia.org/wiki/Mathematics">Mathematics</a>.
+<h3>Public Education</h3>
+<li> Royden
+<li> Alfor
+<li> Tutorial for nn
 <h3>Publications</h3>
 <ul>
 <h4>Machine learning:</h4>
-<li>Y. Halpern, Y.D. Choi, S. Horng, D. Sontag. <a href="papers/HalpernEtAl_amia14.pdf">Using Anchors to Estimate Clinical State without Labeled Data</a>. <cite>American Medical Informatics Association (AMIA) Annual Symposium</cite>, Nov. 2014. [<a href="papers/HalpernEtAl_amia14_slides.pdf">Slides</a>] <a href="papers/bibtex/HalpernEtAl_amia14.txt">BibTex</a>
-
+<li> JAMIA submission <br>
+<li> KDD submission <br>
+  <li>Y. Halpern, Y.D. Choi, S. Horng, D. Sontag. <a href="papers/HalpernEtAl_amia14.pdf">Using Anchors to Estimate Clinical State without Labeled Data</a>. <cite>American Medical Informatics Association (AMIA) Annual Symposium</cite>, Nov. 2014. [<a href="papers/HalpernEtAl_amia14_slides.pdf">Slides</a>] <a href="papers/bibtex/HalpernEtAl_amia14.txt">BibTex</a> <br>
+<li> NIPS 2013 Workshop
 
 
 </body>
