--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 Most importantly, I am a student of <a href="http://en.wikipedia.org/wiki/Computer_science">
 Computer Science</a> 
   and <a href="http://en.wikipedia.org/wiki/Mathematics">Mathematics</a>.
-<h3>Public Education</h3>
+<h3>Open Source Education</h3>
 <li> Royden
 <li> Alfor
 <li> Tutorial for nn
